Add a blue CSS theme
* plasTeX/Renderers/HTMLNotes/Style/sass/theme-blue: New directory.
  Contains the Sass style rules for a blue theme.  This theme is a
  minor modification of the old green theme.

* plasTeX/Renderers/HTMLNotes/Style/Makefile: Add rules for processing
  the above Sass files.

* plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-blue.css:
* plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-default.css:
* plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-green.css:
Freshly generated after the above changes to the Sass sources.

* plasTeX/Renderers/HTMLNotes/Style/sass/base/_simplebibliography.scss:
  Use list-style-type circle for the citations lists in bibliography
  entries.  The previous string value for this property is not
  recognised by Chrome on Android and Safari on iOS.

* plasTeX/Renderers/HTMLNotes/Style/sass/base/_table-of-contents.scss:
  Remove the top margin of the level 0 table of contents.  Add a right
  margin to the section numbers in the table of contents.

--- a/plasTeX/Renderers/HTMLNotes/Style/Makefile
+++ b/plasTeX/Renderers/HTMLNotes/Style/Makefile
@@ -1,5 +1,5 @@
-THEMES = green
-DEFAULT_THEME = green
+THEMES = blue green
+DEFAULT_THEME = blue
 SOURCE_DIRECTORY = sass
 BUILD_DIRECTORY = build
 INSTALLATION_DIRECTORY = ../Themes/default/styles
